Fix exportPDF code style: auto wrap and remove incorrect row number

--- a/packages/rt/styles/ExportPDF.scss
+++ b/packages/rt/styles/ExportPDF.scss
@@ -5,3 +5,7 @@
   margin-bottom: 20px;
   overflow: auto;
 }
+
+.export-pdf-content .md-editor-preview .md-editor-code pre code .md-editor-code-block {
+  text-wrap: wrap;
+}
